--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^4.1.1",
-    "gulp": "^3.9.1"
+    "gulp": "^3.9.1",
+    "isotope-layout": "^3.0.6"
   },
   "devDependencies": {
     "browser-sync": "^2.23.6",
